fixed spacing in settings page and added relevant home page picture.

--- a/client/src/components/StockMetrics/styles.module.css
+++ b/client/src/components/StockMetrics/styles.module.css
@@ -1,28 +1,33 @@
-#wrapper{
-    margin: 30px auto;
+#wrapper {
+  margin: 30px auto;
 }
 
 #header {
-    font-size: 35px;
-    font-weight: 400;
+  font-size: 35px;
+  font-weight: 400;
 }
 
 .activePrice {
-    font-size: 20px;
-    font-weight: 400;
-    margin: 10px auto;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 10px auto;
 }
 
 #charts {
-    margin: 25px 0;
+  margin: 25px 0;
 }
 
 #loaderWrapper {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 50vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 50vh;
+}
+
+#linechart {
+  width: 400px;
+  height: 200px;
 }
 
 #intervalButtons {
